[package]
authors = ['Belsy Yuen <belsy@equilibrium.co>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
license = 'Unlicense'
name = 'pallet-mugwort-art'
repository = 'https://github.com/whalelephant/mugwort-art'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '1.3.4' }
frame-support = { path = "../substrate-ipfs/frame/support", default_features = false }
frame-system = { path = "../substrate-ipfs/frame/system", default_features = false }
pallet-commodities = { path = "../pallet-nft", default_features = false }
pallet-ipfs = { package = "pallet-template", path = "../substrate-ipfs/bin/node-template/pallets/template/" }

[dev-dependencies]
sp-core = { path = "../substrate-ipfs/primitives/core", default_features = false } 
sp-io = { path = "../substrate-ipfs/primitives/io", default_features = false }  
sp-runtime = { path = "../substrate-ipfs/primitives/runtime", default_features = false }  

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-commodities/std'
]
